data/derived/comb/progs/unify/prog0701.ml.out
Characters 28-69:
  let fixpoint (f,b) = wwhile (fun x -> let b = (f x) in (b, b != x),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
